console: Fix scrollbar issue in firefox

--- a/pkg/webui/components/breadcrumbs/breadcrumbs.styl
+++ b/pkg/webui/components/breadcrumbs/breadcrumbs.styl
@@ -22,6 +22,7 @@
   +media-query($bp.s)
     overflow: auto
     margin-right: $ls.xxs * -1
+    scrollbar-width: none
 
     &::-webkit-scrollbar
       display: none
