--- a/pkg/webui/components/navigation/side/side.styl
+++ b/pkg/webui/components/navigation/side/side.styl
@@ -21,6 +21,7 @@
   display: flex
   flex-direction: column
   justify-content: space-between
+  box-sizing: border-box
   +media-query($bp.s)
     max-width: none
     width: 100%
