--- a/pkg/webui/components/table/tabular.styl
+++ b/pkg/webui/components/table/tabular.styl
@@ -14,6 +14,7 @@
 
 .container
   overflow: auto
+  scrollbar-width: none
 
 .pagination
   margin-top: $ls.xxs
