--- a/pkg/webui/components/tabs/tabs.styl
+++ b/pkg/webui/components/tabs/tabs.styl
@@ -18,6 +18,7 @@
   padding: 0
   display: flex
   margin: 0
+  scrollbar-width: none
 
   &::-webkit-scrollbar
     display: none
